[gd_scene load_steps=3 format=3 uid="uid://c3sqodu67i1xf"]

[ext_resource type="PackedScene" uid="uid://dc3fk4sa7ey5n" path="res://ui/inventory_item_cell.tscn" id="1_dcmab"]
[ext_resource type="Script" uid="uid://bl6vn3kicr5sb" path="res://ui/game_ui.gd" id="1_w46tp"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_w46tp")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="LeftHandSolt" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_dcmab")]
layout_mode = 2

[node name="RightHandSolt" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_dcmab")]
layout_mode = 2

[node name="PotionSolt" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_dcmab")]
layout_mode = 2
